# high-performance--DPC-Python-Binding

./: .gitignore  GPU_COMM_CINECA  comenzi_rulare.txt  miniLB_gpu
fisiere_proiect_ajutatoare/: cmake_nou.txt  comenzi_rulare.txt  date_performanta.txt
miniLB/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  bgk.input  test_from_python.input
miniLB/fortran/: README.md
miniLB/fortran/BENCH/CORE/: run.single.serial.fused.x
miniLB/fortran/TEST/DrivenCavity/sycl/: bgk.input  bgk.log.amd
miniLB/fortran/TEST/PoiseuilleFlow/: run.single.gpu.fused.openacc.nv.x
miniLB/include/bgk2d/: alloca.hh  build_obs.hh  check_case.hh  col_MC.hh  collision.hh  diagno.hh  diagnostic.hh  draglift.hh  file_manager.hh  finalize.hh  get_mem.hh  hencol.hh  init.hh  initialize.hh  input.hh  kernel_utils.hh  outdat.hh  precision.hh  probe.hh  probe_visc.hh  prof_i.hh  prof_j.hh  profile.hh  restore_raw.hh  save.hh  save_raw.hh  setup.hh  storage.hh  time.hh  utils.hh  varm.hh  vtk_obstacle.hh  vtk_om.hh  vtk_om_binary.hh  vtk_visc_binary.hh  vtk_xy.hh  vtk_xy_binary.hh  w_obs.hh
miniLB/include/bgk2d/bcond/: bcond_channel.hh  bcond_driven.hh  bcond_inflow.hh  bcond_obs.hh  bcond_periodic.hh  boundaries.hh  build_bcond.hh
miniLB/include/bgk2d/sycl/: usm_buffer.hh
miniLB/python_binding_extension/: benchmark_minilb.py
miniLB/python_binding_extension/dpctl_examples/: miniLB_collision_dpctl.py  miniLB_density_dpctl.py  miniLB_step_dpctl.py  vector_add_dpctl.py  vector_add_kernel.py
miniLB/python_binding_extension/dpctl_examples/miniLB_step_pybind11_kernels/: CMakeLists.txt  CMakeLists.txt.backup  _minilb_step.cpp  _minilb_step_OLD.cpp  test_minilb_step_pybind11.py  test_minilb_step_pybind11.py.backup
miniLB/python_binding_extension/dpctl_examples/miniLB_step_pybind11_kernels copy/: _minilb_step.cpp  test_minilb_step_pybind11.py
miniLB/python_binding_extension/dpctl_examples/vector_add_dpctl_pybind11_kernels/: CMakeLists.txt  _minilb_dpctl.cpp  test_minilb_dpctl_pybind11.py
miniLB/python_binding_extension/inputs/: bgk_1024.input  bgk_bench.input
miniLB/python_binding_extension/python_bindings/: CMakeLists.txt  minilb_py.cpp
miniLB/python_binding_extension/results/: benchmark_results.csv  cpu_optimization_results.csv  cpu_optimization_results.txt
miniLB/src/: alloca.cc  bgk2d.cc  build_obs.cc  check_case.cc  col_MC.cc  collision.cc  diagno.cc  diagnostic.cc  draglift.cc  finalize.cc  get_mem.cc  hencol.cc  init.cc  initialize.cc  input.cc  kernel_utils.cc  outdat.cc  probe.cc  probe_visc.cc  prof_i.cc  prof_j.cc  profile.cc  restore_raw.cc  save.cc  save_raw.cc  setup.cc  storage.cc  time.cc  varm.cc  vtk_obstacle.cc  vtk_om.cc  vtk_om_binary.cc  vtk_visc_binary.cc  vtk_xy.cc  vtk_xy_binary.cc  w_obs.cc
miniLB/src/bcond/: bcond_channel.cc  bcond_driven.cc  bcond_inflow.cc  bcond_obs.cc  bcond_periodic.cc  boundaries.cc  build_bcond.cc
